--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,10 @@
 @font-face {
-    font-family: 'TitleFont';
+    font-family: 'MyFontBold';
     src: url("fonts/Ubuntu-Bold.ttf");
 }
 
 @font-face {
-    font-family: 'ParagraphFont';
+    font-family: 'MyFontRegular';
     src: url("fonts/Ubuntu-Light.ttf");
 }
 
@@ -14,18 +14,24 @@
     box-sizing: border-box;
 }
 
+body {
+    width: 100%;
+
+}
+
 a {
     text-decoration: none;
     color: inherit;
 }
 
 .content {
-    /*margin: 0 auto;*/
+    margin: auto;
+    width: 80%;
 }
 
 .header {
     margin: auto;
-    height: 200px;
+    height: 100px;
     background: white;
     display: table;
 }
@@ -37,46 +43,58 @@ a {
 }
 
 section {
-    border: 1px solid black;
-    padding: 20px;
+    margin-top: 50px;
 }
 
 .logo h1 {
     color: #e3316f;
-    font-family: 'TitleFont', serif;
+    font-family: 'MyFontBold', serif;
     font-size: 45px;
 }
 
-.intro-text {
-    font-family: 'ParagraphFont', serif;
+#intro-text {
+    font-family: 'MyFontRegular', serif;
     text-align: center;
-
 }
 
 .section#employees {
-    background: green;
-    padding: 50px;
-    overflow: auto;
+    width: 100%;
+    text-align: center;
 }
 
 .employee {
-    background: yellow;
+    margin: 0 15px 40px;
+    display: inline-block;
+    text-align: left;
+    width: 370px;
     height: 100px;
-    float: left;
-    margin-left: 30px;
+    background: #0f0e17;
+
 }
 
 .employee img {
-    max-height: 100%;
+    height: 100%;
+    float: left;
 }
 
 .employee .bio {
+    padding: 5px 40px 5px 10px;
     height: 100%;
-    float: right;
-    overflow: auto;
+    float: left;
 }
 
-.employee .bio div{
-    padding: 7px;
+.employee .bio div {
+    margin-top: 5px;
+    font-family: 'MyFontRegular', serif;
+    color: white;
+}
 
+.employee .bio .name {
+    font-family: 'MyFontBold', serif;
+    font-size: 25px;
+}
+
+.employee .bio .mail {
+    cursor: pointer;
+    color: #50c3dc;
 }
